# vkmark

./: INSTALL  NEWS  README  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
data/: meson.build
data/models/: kmscube.ply
data/shaders/: desktop.frag  desktop.frag.spv  desktop.vert  desktop.vert.spv  effect2d-blur.frag  effect2d-blur.frag.spv  effect2d-edge.frag  effect2d-edge.frag.spv  effect2d-none.frag  effect2d-none.frag.spv  effect2d.vert  effect2d.vert.spv  light-advanced.frag  light-advanced.frag.spv  light-advanced.vert  light-advanced.vert.spv  light-basic-tex.frag  light-basic-tex.frag.spv  light-basic-tex.vert  light-basic-tex.vert.spv  light-basic.frag  light-basic.frag.spv  light-basic.vert  light-basic.vert.spv  light-cel.frag  light-cel.frag.spv  light-phong.frag  light-phong.frag.spv  light-phong.vert  light-phong.vert.spv  vkcube.frag  vkcube.frag.spv  vkcube.vert  vkcube.vert.spv
doc/: meson.build  vkmark.1
src/: benchmark.cpp  benchmark.h  benchmark_collection.cpp  benchmark_collection.h  clear_scene.cpp  clear_scene.h  cube_scene.cpp  cube_scene.h  default_benchmarks.cpp  default_benchmarks.h  default_options_scene.cpp  default_options_scene.h  device_uuid.cpp  device_uuid.h  dynamic.list  gen_format_map.py  log.cpp  log.h  main.cpp  main_loop.cpp  main_loop.h  managed_resource.h  mesh.cpp  mesh.h  meson.build  model.cpp  model.h  options.cpp  options.h  scene.cpp  scene.h  scene_collection.cpp  scene_collection.h  util.cpp  util.h  vertex_scene.h  vkutil.cpp  vkutil.h  vulkan_image.h  vulkan_state.cpp  (+10 more)
src/pch/: cpp_pch.h
src/scenes/: clear_scene.cpp  clear_scene.h  cube_scene.cpp  cube_scene.h  default_options_scene.cpp  default_options_scene.h  desktop_scene.cpp  desktop_scene.h  effect2d_scene.cpp  effect2d_scene.h  shading_scene.cpp  shading_scene.h  texture_scene.cpp  texture_scene.h  vertex_scene.cpp  vertex_scene.h
src/vkutil/: buffer_builder.cpp  buffer_builder.h  copy_buffer.cpp  copy_buffer.h  descriptor_set_builder.cpp  descriptor_set_builder.h  find_matching_memory_type.cpp  find_matching_memory_type.h  framebuffer_builder.cpp  framebuffer_builder.h  image_builder.cpp  image_builder.h  image_view_builder.cpp  image_view_builder.h  map_memory.cpp  map_memory.h  one_time_command_buffer.cpp  one_time_command_buffer.h  pipeline_builder.cpp  pipeline_builder.h  render_pass_builder.cpp  render_pass_builder.h  semaphore_builder.cpp  semaphore_builder.h  texture.h  texture_builder.cpp  texture_builder.h  transition_image_layout.cpp  transition_image_layout.h  vkutil.h
src/ws/: atomic_kms_window_system.cpp  atomic_kms_window_system.h  display_native_system.cpp  display_native_system.h  display_window_system_plugin.cpp  headless_native_system.cpp  headless_native_system.h  headless_window_system_plugin.cpp  kms_window_system.cpp  kms_window_system.h  kms_window_system_plugin.cpp  native_system.h  nows_window_system.cpp  nows_window_system.h  nows_window_system_plugin.cpp  swapchain_window_system.cpp  swapchain_window_system.h  wayland_native_system.cpp  wayland_native_system.h  wayland_window_system_plugin.cpp  window_system_priority.h  xcb_native_system.cpp  xcb_native_system.h  xcb_window_system_plugin.cpp
tests/: benchmark_collection_test.cpp  catch.hpp  catch_main.cpp  main_loop_test.cpp  managed_resource_test.cpp  mesh_test.cpp  meson.build  model_test.cpp  noise_rgb.c  noise_rgba.c  null_window_system.h  options_test.cpp  scene_collection_test.cpp  scene_option_test.cpp  test_scene.cpp  test_scene.h  test_window_system_plugin.cpp  test_window_system_plugin.h  util_data_file_test.cpp  util_image_file_test.cpp  util_split_test.cpp  window_system_loader_test.cpp
tests/data/: test.txt
tests/data/subdir/: test.txt
tests/pch/: cpp_pch.h
